lang/src/ast/snapshots/rain_lang__ast__test__pub_fn.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        pub let foo = fn() {}\n        \")"
---
ModuleRoot(
 LetDeclare(
  pub
  Assignment(
   Name(
    foo
   )
   AnonymousFnDeclare(
    Args(
    )
    Block(
    )
   )
  )
 )
)
