lang/src/ast/snapshots/rain_lang__ast__test__pub_let.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        pub let foo = 5\n        \")"
---
ModuleRoot(
 LetDeclare(
  pub
  Assignment(
   Name(
    foo
   )
   IntegerLiteral(
    5
   )
  )
 )
)
