lang/src/ast/snapshots/rain_lang__ast__test__record_constructor.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"{a = 1, b = 2, c = \\\"ajlsdkf\\\"}\")"
---
Record(
 RecordEntry(
  a
  IntegerLiteral(
   1
  )
 )
 RecordEntry(
  b
  IntegerLiteral(
   2
  )
 )
 RecordEntry(
  c
  StringLiteral(
   ajlsdkf
  )
 )
)
