lang/src/ast/snapshots/rain_lang__ast__test__record_constructor_nested.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"{a = {b = {c = 5}},}\")"
---
Record(
 RecordEntry(
  a
  Record(
   RecordEntry(
    b
    Record(
     RecordEntry(
      c
      IntegerLiteral(
       5
      )
     )
    )
   )
  )
 )
)
