lang/src/ast/snapshots/rain_lang__ast__test__string_literal.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"\\\"asldjf\\\"\")"
---
StringLiteral(
 asldjf
)
